helm/orders-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: opm-orders-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:                       
  rules:
  - http:
      paths:
        - path: /opm-orders(/|$)(.*)
          backend:
            serviceName: opm-orders
            servicePort: 3000
