helm/portal-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: opm-portal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:                       
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: opm-portal
            servicePort: 80
